import custom select to AddQuote component to test - perfect. aligned with the form with no issues.
it's still not functional though. going to call it a day for today, and continue tomorrow with its functionality, so we can add / edit quotes successfully

--- a/client/vite-project/src/components/edit-quote/EditQuote.module.scss
+++ b/client/vite-project/src/components/edit-quote/EditQuote.module.scss
@@ -139,5 +139,4 @@
     grid-row: 2 / 3;
     grid-column: 1 / 2;
     padding: 0;
-    height: 50px
 }
